force-app/main/default/objects/PgM_Related_Item__c/PgM_Related_Item__c.object-meta.xml
<CustomObject>
    <label>Related Item</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>