force-app/main/default/objects/PgM_Related_Item__c/fields/PgM_Description__c.field-meta.xml
<CustomField>
    <fullName>PgM_Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>