force-app/main/default/objects/PgM_Related_Item__c/fields/PgM_Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>PgM_Parent_Item__c</fullName>
    <label>Parent Item</label>
    <referenceTo>PgM_RAID_Log__c</referenceTo>
    <relationshipLabel>Related Items</relationshipLabel>
    <relationshipName>Related_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>