force-app/main/default/objects/PgM_Related_Item__c/fields/PgM_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>PgM_Primary_Owner__c</fullName>
    <formula>PgM_Related_Item__r.PgM_Primary_Owner__r.FirstName + &quot; &quot; +  PgM_Related_Item__r.PgM_Primary_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Owner</label>
    <type>Text</type>
</CustomField>