force-app/main/default/objects/PgM_Related_Item__c/fields/PgM_Related_Item__c.field-meta.xml
<CustomField>
    <fullName>PgM_Related_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Item</label>
    <referenceTo>PgM_RAID_Log__c</referenceTo>
    <relationshipLabel>Related Items (Related Item)</relationshipLabel>
    <relationshipName>Related_Items1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>