force-app/main/default/objects/PgM_Related_Item__c/fields/PgM_Status__c.field-meta.xml
<CustomField>
    <fullName>PgM_Status__c</fullName>
    <formula>TEXT( PgM_Related_Item__r.PgM_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>