force-app/main/default/objects/PgM_Related_Item__c/fields/PgM_Type__c.field-meta.xml
<CustomField>
    <fullName>PgM_Type__c</fullName>
    <formula>PgM_Related_Item__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>